--- a/html/index.html
+++ b/html/index.html
@@ -383,7 +383,7 @@ var J_font = document.getElementById('J_font');
 var J_gb = document.getElementById('J_gb');
 
 halo.use('yscroll', 'loader',function(m){
-  var loader = new m.loader(['img/loading.png','img/img_1.png','img/img_2.png']).loadend(function(){
+  var loader = new m.loader(['../img/loading.png','../img/img_1.png','../img/img_2.png']).loadend(function(){
       J_percent.innerHTML = parseInt(this.percent);
 
       if(this._index == 3){      
@@ -598,5 +598,3 @@ if(parseFloat(browser.versionNum) <= 2.3){
 </script>
 	
 
-
-<embed id="xunlei_com_thunder_helper_plugin_d462f475-c18e-46be-bd10-327458d045bd" type="application/thunder_download_plugin" height="0" width="0"><div id="window-resizer-tooltip" style="display: block;"><a href="http://zhaopin.jd.com/h5/index.html?from=singlemessage&isappinstalled=0#" title="Edit settings" style="background-image: url(chrome-extension://kkelicaakdanhinjdeammmilcgefonfh/images/icon_19.png);"></a><span class="tooltipTitle">Window size: </span><span class="tooltipWidth" id="winWidth">480</span> x <span class="tooltipHeight" id="winHeight">792</span><br><span class="tooltipTitle">Viewport size: </span><span class="tooltipWidth" id="vpWidth">480</span> x <span class="tooltipHeight" id="vpHeight">676</span></div></body></html>
